changed resume links

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <li class="pure-menu-item" data-menuanchor="contact-section">
                 <a class="pure-menu-link" href="#contact-section">Contact</a>
             </li>
-            <li class="pure-menu-item">
-                <a class="pure-menu-link" href="#">Resume</a>
+            <li class="pure-menu-item second-last">
+                <a class="pure-menu-link" href="pictures/Emilie_Gerber_Resume.pdf">Resume</a>
             </li>
         </ul>
     </div>
@@ -50,7 +50,7 @@
             <div class="pure-u-1" id="welcome-box">
                 <h1><span id="welcome-typer"></span></h1>
                 <div id="typed-strings">
-                    <p>Welcome.<br>
+                    <p> Welcome.<br>
                     <strong>My name is Emilie :)</strong></p>
                     <p>I &lt;3 to build things for the web.</p>
                     <p>Have a look around.</p>
@@ -110,7 +110,7 @@
                     <div class="pure-u-1">
                         <div class="slide-content">                   
                             <h2 class="title">PORTOFOLIO</h2>
-                            <p>Feel free to check me out on <a href="https://www.linkedin.com/in/emiliegerber">LinkedIn</a>, <a href="https://github.com/emilieg">Github</a>, <a href="https://profiles.generalassemb.ly/profiles/emilie-gerber">GA
+                            <p>Feel free to check me out on <a href="https://www.linkedin.com/in/emiliegerber" target="_blank">LinkedIn</a>, <a href="https://github.com/emilieg" target="_blank">Github</a>, <a href="https://profiles.generalassemb.ly/profiles/emilie-gerber" target="_blank">GA
                             Profiles </a> or follow the arrow to check out my
                             portofolio.</p>
                         </div>
@@ -142,13 +142,13 @@
                         won 2nd place overall as well as the Code for Impact
                         award.</p>
                         <span><a href=
-                        "http://www.hackathon.io/what-s-that2"><i aria-hidden=
+                        "http://www.hackathon.io/what-s-that2" target="_blank"><i aria-hidden=
                         "true" class="fa fa-globe sm-icon pure-button"></i></a></span>
                         <span><a href=
-                        "https://github.com/emilieg/whatsinthis"><i aria-hidden="true"
+                        "https://github.com/emilieg/whatsinthis" target="_blank"><i aria-hidden="true"
                         class="fa fa-code-fork sm-icon pure-button"></i></a></span>
                         <span><a href=
-                        "https://youtu.be/1Sst23oGZE8"><i aria-hidden="true"
+                        "https://youtu.be/1Sst23oGZE8" target="_blank"><i aria-hidden="true"
                         class="fa fa-youtube-play sm-icon pure-button"></i></a></span>
                     </div>
                     <div class="pure-u-1-2"><img alt="redbull-ingredients"
@@ -170,10 +170,10 @@
                         whether you should drink red or white. Save your favorite bar to a favorites list. This is a full
                         stack node.js app that features user auth and full CRUD
                         capability.</p>
-                        <span><a href="https://wino911.herokuapp.com/"><i aria-hidden="true"
+                        <span><a href="https://wino911.herokuapp.com/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span>
                         <span><a href=
-                        "https://github.com/emilieg/Wino911"><i aria-hidden=
+                        "https://github.com/emilieg/Wino911" target="_blank"><i aria-hidden=
                         "true" class="fa fa-code-fork sm-icon pure-button"></i></a></span>
                     </div>
                     <div class="pure-u-1-2"><img alt="image-project" class=
@@ -197,10 +197,10 @@
                         on Rails as a group initiative with 3 other developers
                         in 4 days.</p>
                         <span><a href=
-                        "http://cappstone.herokuapp.com/"><i aria-hidden="true"
+                        "http://cappstone.herokuapp.com/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span>
                         <span><a href=
-                        "https://github.com/emilieg/cappstone"><i aria-hidden=
+                        "https://github.com/emilieg/cappstone" target="_blank"><i aria-hidden=
                         "true" class="fa fa-code-fork sm-icon pure-button"></i></a></span>
                     </div>
                     <div class="pure-u-1-2"><img alt="image-project" class=
@@ -225,7 +225,7 @@
                         <span><a href=
                         "http://emilieg.github.io/stuck-in-the-mud/"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span>
-                        <span><a href="https://github.com/emilieg/stuck-in-the-mud"><i aria-hidden="true"
+                        <span><a href="https://github.com/emilieg/stuck-in-the-mud" target="_blank"><i aria-hidden="true"
                         class="fa fa-code-fork sm-icon pure-button"></i></a></span>
                     </div>
                     <div class="pure-u-1-2"><img alt="image-project" class=
@@ -265,12 +265,13 @@
                 <div class="pure-u-1-1">
                    <footer>
                       <ul>
-                        <li class="footer-li"><a href="https://github.com/emilieg"><i class="fa fa-github lg-icon" aria-hidden="true"></i></a></li>
-                        <li class="footer-li"><a href="https://www.linkedin.com/in/emiliegerber"><i class="fa fa-linkedin footer-icons lg-icon" aria-hidden="true"></i></a></li>
-                        <li class="footer-li"><a href="https://resume.creddle.io/resume/ecxilz1oj01"><i class="fa fa-file-pdf-o lg-icon" aria-hidden="true"></i></a></li>
-                      </ul> 
+                        <li class="footer-li"><a href="https://github.com/emilieg" class="footer-icon" target="_blank"><i class="fa fa-github lg-icon" aria-hidden="true"></i></a></li>
+                        <li class="footer-li"><a href="https://www.linkedin.com/in/emiliegerber" class="footer-icon" target="_blank"><i class="fa fa-linkedin footer-icons lg-icon" aria-hidden="true"></i></a></li>
+                        <li class="footer-li"><a href="pictures/Emilie_Gerber_Resume.pdf" class="footer-icon" target="_blank"><i class="fa fa-file-pdf-o lg-icon" aria-hidden="true"></i></a></li>
+                      </ul>
+                      <p> &copy; Emilie Gerber 2016</p> 
                    </footer> 
-                </div>
+                </div
             </div> 
         </section>
     </div>  
