fixing welcome message pause

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="pure-u-1" id="welcome-box">
                 <h1><span id="welcome-typer"></span></h1>
                 <div id="typed-strings">
-                    <p> Welcome.<br>
-                    <strong>My name is Emilie :)</strong></p>
+<!--                     <p> Welcome. <br>
+                    My name is Emilie :) </p>
                     <p>I &lt;3 to build things for the web.</p>
-                    <p>Have a look around.</p>
+                    <p>Have a look around.</p> -->
                 </div>
             </div>
         </section>
