removed link from cappstone

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                         "fa fa-users icon-sm"></i> This app was build in Ruby
                         on Rails as a group initiative with 3 other developers
                         in 4 days.</p>
-                        <span><a href=
+<!--                         <span><a href=
                         "http://cappstone.herokuapp.com/" target="_blank"><i aria-hidden="true"
-                        class="fa fa-globe sm-icon pure-button"></i></a></span>
+                        class="fa fa-globe sm-icon pure-button"></i></a></span> -->
                         <span><a href=
                         "https://github.com/emilieg/cappstone" target="_blank"><i aria-hidden=
                         "true" class="fa fa-code-fork sm-icon pure-button"></i></a></span>
@@ -223,7 +223,7 @@
                         score points when their roll does not include any twos
                         or fives.</p>
                         <span><a href=
-                        "http://emilieg.github.io/stuck-in-the-mud/"><i aria-hidden="true"
+                        "http://emilieg.github.io/stuck-in-the-mud/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span>
                         <span><a href="https://github.com/emilieg/stuck-in-the-mud" target="_blank"><i aria-hidden="true"
                         class="fa fa-code-fork sm-icon pure-button"></i></a></span>
