--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="slide" data-anchor="slide1">
                     <div class="pure-u-1">
                         <div class="slide-content">                   
-                            <h2 class="title">PORTOFOLIO</h2>
+                            <h2 class="title">PROJECTS</h2>
                             <p>Feel free to check me out on <a href="https://www.linkedin.com/in/emiliegerber" target="_blank">LinkedIn</a>, <a href="https://github.com/emilieg" target="_blank">Github</a>, <a href="https://profiles.generalassemb.ly/profiles/emilie-gerber" target="_blank">GA
                             Profiles </a> or follow the arrow to check out my
                             portofolio.</p>
