--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="pure-u-1" id="welcome-box">
                 <h1><span id="welcome-typer"></span></h1>
                 <div id="typed-strings">
-<!--                     <p> Welcome. <br>
-                    My name is Emilie :) </p>
+                    <p> Welcome.</p>
+                    <p> My name is Emilie :) </p>
                     <p>I &lt;3 to build things for the web.</p>
-                    <p>Have a look around.</p> -->
+                    <p>Have a look around.</p>
                 </div>
             </div>
         </section>
@@ -105,7 +105,7 @@
             </div>
         </section>
         <section class="section" data-anchor="projects-section">
-            <div class="pure-g">
+ <!--            <div class="pure-g">
                 <div class="slide" data-anchor="slide1">
                     <div class="pure-u-1">
                         <div class="slide-content">                   
@@ -116,8 +116,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!--     </section>
-  <section class="section">   -->
+            </div> -->
             <div class="pure-g">
                 <div class="slide" data-anchor="slide2">
                   <div class="slide-content">
