--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Portofolio</title>
+    <title>Portfolio</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" rel=
     "stylesheet">
@@ -17,9 +17,9 @@
     rel="stylesheet"><!--  Font Awesome Icons -->
     <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
-    rel="stylesheet"><!-- Internal Stylesheet -->
-    <link href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css"
     rel="stylesheet">
+    <link href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css"
+    rel="stylesheet"><!-- Internal Stylesheet -->
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
