--- a/main.html
+++ b/main.html
@@ -26,33 +26,33 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper" id="menu">
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item" data-menuanchor=
+                <ul class="menu-list">
+                    <li class="menu-item" data-menuanchor=
                     "welcome-section">
-                        <a class="pure-menu-link" href=
+                        <a class="menu-link" href=
                         "#welcome-section">Home</a>
                     </li>
-                    <li class="pure-menu-item" data-menuanchor="about-section">
-                        <a class="pure-menu-link" href="#about-section">About
+                    <li class="menu-item" data-menuanchor="about-section">
+                        <a class="menu-link" href="#about-section">About
                         Me</a>
                     </li>
-                    <li class="pure-menu-item" data-menuanchor=
+                    <li class="menu-item" data-menuanchor=
                     "skills-section">
-                        <a class="pure-menu-link" href=
+                        <a class="menu-link" href=
                         "#skills-section">Skills</a>
                     </li>
-                    <li class="pure-menu-item" data-menuanchor=
+                    <li class="menu-item" data-menuanchor=
                     "projects-section">
-                        <a class="pure-menu-link" href=
+                        <a class="menu-link" href=
                         "#projects-section">Projects</a>
                     </li>
-                    <li class="pure-menu-item" data-menuanchor=
+                    <li class="menu-item" data-menuanchor=
                     "contact-section">
-                        <a class="pure-menu-link" href=
+                        <a class="menu-link" href=
                         "#contact-section">Contact</a>
                     </li>
-                    <li class="pure-menu-item second-last">
-                        <a class="pure-menu-link" href=
+                    <li class="menu-item second-last">
+                        <a class="menu-link" href=
                         "pictures/Emilie_Gerber_Resume.pdf">Resume</a>
                     </li>
                 </ul>
@@ -79,9 +79,10 @@
                 <div class="row" id="about-me">
                     <div class="col s12">
                         <h2 class="h2-about">ABOUT ME</h2>
+                         <div class="divider"></div>
                     </div>
                     <div class="inside-about">
-                        <div class="col s12 m6">
+                        <div class="col s12 m6 about-portrait">
                         <img class="portrait" src=
                         "pictures/portrait-crp.png"></div>
                         <div class="col s12 m6">
@@ -104,7 +105,8 @@
               <div class="container">
                 <div class="row" id="skills-list">
                     <div class="col s12">
-                        <h2>TECHNICAL SKILLS</h2>
+                        <h2>SKILLS</h2>
+                         <div class="divider"></div>
                     </div>
                     <div class="col s12 m6 l4">
                         <h4>LANGUAGES</h4>
@@ -130,9 +132,10 @@
             <div class="section" data-anchor="projects-section">
                 <div class="row">
                 <h2 class="projects-title"> PROJECTS </h2>
+                 <div class="divider"></div>
                     <div class="slide" data-anchor="slide1">
                         <div class="slide-content">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l8">
                                 <h3 class="title">WHAT'S THAT?</h3>
                                 <p><span><img class="firebase" src=
                                 "pictures/devicons-firebase.png"></span><i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i><i class="devicon-angularjs-plain icon"></i><span><img class="pure-img firebase"
@@ -158,7 +161,7 @@
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-youtube-play sm-icon pure-button"></i></a></span>
                             </div>
-                            <div class="col s12 m12 l6 iphone"><img alt=
+                            <div class="col s12 m12 l4 iphone"><img alt=
                             "redbull-ingredients" class="responsive-img" id=
                             "redbull-img" src=
                             "pictures/whats-that-phone.png"></div>
@@ -261,12 +264,13 @@
             </div>
             <div class="section" data-anchor="contact-section">
                 <div class="row">
-                    <div class="col l8 offset-l2">
+                    <div class="col m6 offset-m3 s12">
                         <h2>GET IN TOUCH</h2>
+                         <div class="divider"></div>
                         <form action=
                         "https://formspree.io/emiliegerberharris@gmail.com"
                         class="pure-form pure-form-aligned" method="post">
-                            <fieldset>
+                            <!-- <fieldset> -->
                                 <div class="pure-control-group">
                                     <label>NAME</label> <input name="name"
                                     placeholder="Name" type="text">
@@ -278,13 +282,13 @@
                                 <div class="pure-control-group">
                                     <label>MESSAGE</label> 
                                     <textarea name="message" placeholder=
-                                    "Message"></textarea>
+                                    "Message" class="materialize-textarea"></textarea>
                                 </div>
                                 <div class="pure-controls">
                                     <button class="pure-button" type="submit"
                                     value="Send">Submit</button>
                                 </div>
-                            </fieldset>
+                            <!-- </fieldset> -->
                         </form>
                     </div>
                 </div>
