project background and buttons

--- a/main.html
+++ b/main.html
@@ -129,10 +129,10 @@
                 </div>
               </div>  
             </div>
-            <div class="section" data-anchor="projects-section">
+            <div class="section projects" data-anchor="projects-section">
                 <div class="row">
                 <h2 class="projects-title"> PROJECTS </h2>
-                 <div class="divider"></div>
+                <!--  <div class="divider"></div> -->
                     <div class="slide" data-anchor="slide1">
                         <div class="slide-content">
                             <div class="col s12 m12 l8">
@@ -149,17 +149,17 @@
                                 "fa fa-users icon-sm"></i> This app was a group
                                 collaboration at the AngelHack Hackathon
                                 Seattle. We won 2nd place overall as well as
-                                the Code for Impact award.</p><span><a href=
+                                the Code for Impact award.</p><span><button class="btn"><a href=
                                 "http://www.hackathon.io/what-s-that2" target=
                                 "_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon pure-button"></i></a></span>
-                                <span><a href=
+                                "fa fa-globe sm-icon"></i></a></button></span>
+                                <span><button class="btn"><a href=
                                 "https://github.com/emilieg/whatsinthis"
                                 target="_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon pure-button"></i></a></span>
-                                <span><a href="https://youtu.be/1Sst23oGZE8"
+                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                                <span><button class="btn"><a href="https://youtu.be/1Sst23oGZE8"
                                 target="_blank"><i aria-hidden="true" class=
-                                "fa fa-youtube-play sm-icon pure-button"></i></a></span>
+                                "fa fa-youtube-play sm-icon"></i></a></button></span>
                             </div>
                             <div class="col s12 m12 l4 iphone"><img alt=
                             "redbull-ingredients" class="responsive-img" id=
@@ -183,14 +183,14 @@
                                 or white. Save your favorite bar to a favorites
                                 list. This is a full stack node.js app that
                                 features user auth and full CRUD
-                                capability.</p><span><a href=
+                                capability.</p><span><button class="btn"><a href=
                                 "https://wino911.herokuapp.com/" target=
                                 "_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon pure-button"></i></a></span>
-                                <span><a href=
+                                "fa fa-globe sm-icon"></i></a></button></span>
+                                <span><button class="btn"><a href=
                                 "https://github.com/emilieg/Wino911" target=
                                 "_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon pure-button"></i></a></span>
+                                "fa fa-code-fork sm-icon"></i></a></button></span>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -221,10 +221,10 @@
                                 <!--                         <span><a href=
                         "http://cappstone.herokuapp.com/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span> -->
-                                <span><a href=
+                                <span><button class="btn"><a href=
                                 "https://github.com/emilieg/cappstone" target=
                                 "_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon pure-button"></i></a></span>
+                                "fa fa-code-fork sm-icon"></i></a></button></span>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -247,13 +247,13 @@
                                 players compete for the highest score. They are
                                 only able to score points when their roll does
                                 not include any twos or
-                                fives.</p><span><a href="http://emilieg.github.io/stuck-in-the-mud/"
+                                fives.</p><span><button class="btn"><a href="http://emilieg.github.io/stuck-in-the-mud/"
                                 target="_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon pure-button"></i></a></span>
-                                <span><a href=
+                                "fa fa-globe sm-icon"></i></a></button></span>
+                                <span><button class="btn"><a href=
                                 "https://github.com/emilieg/stuck-in-the-mud"
                                 target="_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon pure-button"></i></a></span>
+                                "fa fa-code-fork sm-icon"></i></a></button></span>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -285,7 +285,7 @@
                                     "Message" class="materialize-textarea"></textarea>
                                 </div>
                                 <div class="pure-controls">
-                                    <button class="pure-button" type="submit"
+                                    <button class="btn" type="submit"
                                     value="Send">Submit</button>
                                 </div>
                             <!-- </fieldset> -->
