adjust for iphone5

--- a/main.html
+++ b/main.html
@@ -135,8 +135,10 @@
                 <!--  <div class="divider"></div> -->
                     <div class="slide" data-anchor="slide1">
                         <div class="slide-content">
-                            <div class="col s12 m12 l8">
+                            <div class="col s12 m12 l12">
                                 <h3 class="title">WHAT'S THAT?</h3>
+                            </div>    
+                            <div class="col s12 m12 l8">    
                                 <p><span><img class="firebase" src=
                                 "pictures/devicons-firebase.png"></span><i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i><i class="devicon-angularjs-plain icon"></i><span><img class="pure-img firebase"
                                 src="pictures/devicons-swift.png"></span></p>
@@ -149,7 +151,11 @@
                                 "fa fa-users icon-sm"></i> This app was a group
                                 collaboration at the AngelHack Hackathon
                                 Seattle. We won 2nd place overall as well as
-                                the Code for Impact award.</p><span><button class="btn"><a href=
+                                the Code for Impact award.</p>
+                            </div>
+
+                            <div class="col s12 m12 l12">    
+                                <span><button class="btn"><a href=
                                 "http://www.hackathon.io/what-s-that2" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
@@ -164,7 +170,9 @@
                             <div class="col s12 m12 l4 iphone"><img alt=
                             "redbull-ingredients" class="responsive-img" id=
                             "redbull-img" src=
-                            "pictures/whats-that-phone.png"></div>
+                            "pictures/whats-that-phone.png">
+                            </div>
+
                         </div>
                     </div>
                 </div>
